@@ -6,14 +6,14 @@ For Linux users:
 To install:
 
 * Extract the binary kit to a temporary directory.
-  This will create a new directory called 'sdcc-4.0.0' in the temporary directory.
+  This will create a new directory called 'sdcc-4.1.0' in the temporary directory.
     cd ~
     mkdir tmp
     cd tmp
-    tar xjf path/to/binary/kit/sdcc-4.0.0-i386-unknown-linux2.5.tar.bz2
+    tar xjf path/to/binary/kit/sdcc-4.1.0-i386-unknown-linux2.5.tar.bz2
 
 * Change to the sdcc directory and copy all files to /usr/local
-    cd sdcc-4.0.0
+    cd sdcc-4.1.0
     cp -r * /usr/local
 
 This will install sdcc binaries into: /usr/local/bin/
@@ -39,8 +39,8 @@ To install:
 
 * If you would like to keep a copy of your previous version,
   rename the directory where it's installed first
-* Run sdcc-4.0.0-setup.exe for 32 bit Windows or
-  Run sdcc-4.0.0-x64-setup.exe for 64 bit Windows
+* Run sdcc-4.1.0-setup.exe for 32 bit Windows or
+  Run sdcc-4.1.0-x64-setup.exe for 64 bit Windows
 
 By default this will install sdcc binaries into: C:\Program Files\SDCC\bin\
 header files into:                               C:\Program Files\SDCC\include\
@@ -64,11 +64,11 @@ For Mac OS X users:
 To install:
 
 * Extract the binary kit to a temporary directory.
-  This will create a new directory called 'sdcc-4.0.0' in the temporary directory.
+  This will create a new directory called 'sdcc-4.1.0' in the temporary directory.
     cd ~
     mkdir tmp
     cd tmp
-    tar xjf path/to/binary/kit/sdcc-4.0.0-universal-apple-macosx.tar.bz2
+    tar xjf path/to/binary/kit/sdcc-4.1.0-x86_64-apple-macosx.tar.bz2
 
 * Change to the sdcc directory and copy all files to /Developer/sdcc
     cp -r sdcc /Developer/sdcc
