@@ -262,7 +262,7 @@ status collapsed
 
 \end_inset
 
-, etc.), Dallas DS80C390 variants, Freescale (formerly Motorola) HC08 based
+, etc.), Dallas DS80C390 variants, NXP (formerly Freescale/Motorola) HC08 based
  (hc08, s08), Zilog Z80 based MCUs (Z80, Z180, eZ80 in Z80 mode, gbz80,
  Rabbit 2000/3000, Rabbit 3000A 
 \begin_inset Index idx
