@@ -1,3 +1,15 @@
+2021-03-02 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/ds390/ralloc.c (isOperandInFarSpace2): fixed warning
+	* src/mcs51/peep.c (doPushScan): fixed warning
+
+2021-02-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* .version,
+	  doc/INSTALL.txt,
+	  sdcc.spec: Update version to 4.1.0 for release
+	* doc/sdccman.lyx: update to reflect Freescale/NXP merger
+
 2021-02-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
